# InvestWise-Predictor

./: .gitignore  .pre-commit-config.yaml  API_TESTING_COMMANDS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  README_COMPLETE.md  SECURITY.md  TESTING_GUIDE.md  docker-compose.yml  requirements.txt  setup.ps1  setup.sh  test.md  test_complete_functionality.py  validate_devsecops.sh
.github/workflows/: ci-cd.yml  ci.yml
backend/: .env  Dockerfile  Dockerfile.prod  README.md  alembic.ini  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_functionality.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  data.py  health.py  metrics.py  predict.py
backend/app/core/: config.py
backend/app/crud/: market_data.py  model_metrics.py  predictions.py  users.py
backend/app/db/: models.py  session.py
backend/app/utils/: data_processor.py  rate_limiter.py
backend/apps/: admin.py  api_views.py  apps.py  apps_fixed.py  consumers.py  forms.py  managers.py  models.py  permissions.py  routing.py  serializers.py  serializers_new.py  serializers_old.py  server.js  signals.py  tasks.py  tests.py  urls.py  urls_new.py  utils.py  utils_new.py  views.py  views_new.py  views_old.py
backend/investwise/: asgi.py  authentication.py  cache.py  celery.py  error_handling.py  external_logging.py  logging.py  middleware.py  permissions.py  signals.py  tasks.py  urls.py  wsgi.py
backend/investwise/settings/: __init__.py  base.py  local.py  production.py  settings.py  staging.py  test.py
backend/investwise_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_utils.py
data/raw/: exchange_rates.csv  gdp.csv  inflation.csv  interest_rates.csv  mobile_payments.csv  trade_foreign_summary.csv
frontend/: .stylelintrc  Procfile  gulpfile.js  karma.conf.js  next.config.js  package-lock.json  package_new.json  tailwind.config.js  webpack.config.js
frontend/public/: About.html  Blog.html  Data Science & Analytics Consultancy.webm  Data Science & Analytics Consultancy_2.webm  Insights.html  Testimonials.html  chart.py  contact.html  index.html  join.html  login.html  services.html  test.html
frontend/src/: App.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Dashboard.js  Feedback.js  Footer.js  Header.js  Investment.js  Login.js  Notifications.js  PredictionForm.js  PredictionList.js  Predictions.js  Profile.js  Register.js
frontend/src/styles/: main.css
frontend/src/tests/: components.test.js
frontend/src/utils/: api.js
infrastructure/terraform/: eks.tf  main.tf  outputs.tf  rds.tf  variables.tf
k8s/helm/investwise/: Chart.yaml  values.yaml
k8s/helm/investwise/templates/: _helpers.tpl  backend.yaml
ml/orchestrator/: deploy.py  flows.py
ml/training/: data_utils.py  train.py
ml_service/: Dockerfile  requirements.txt
ml_service/app/: explainers.py  main.py  model_loader.py
scripts/: generate_sample_data.py
venv_temp/: pyvenv.cfg
