[metadata]
name = investwise-backend
version = 1.0.0
description = AI-powered investment prediction platform for Kenyan markets - Backend API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MadScie254/InvestWise-Predictor
author = InvestWise Team
author_email = team@investwise.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    pydantic[email]>=2.5.0
    pydantic-settings>=2.1.0
    sqlalchemy>=2.0.0
    alembic>=1.13.0
    psycopg2-binary>=2.9.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4
    python-multipart>=0.0.6
    redis>=5.0.0
    requests>=2.31.0
    pandas>=2.1.0
    numpy>=1.24.0
    prometheus-client>=0.19.0
    structlog>=23.2.0

[options.packages.find]
where = .
include = app*
exclude = tests*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    httpx>=0.25.0
    black>=23.9.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.6.0
    pre-commit>=3.5.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    httpx>=0.25.0
prod =
    gunicorn>=21.2.0

[options.entry_points]
console_scripts =
    investwise-server = app.main:main

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[egg_info]
tag_build = 
tag_date = 0